--- a/_vti_cnf/choice5.html
+++ b/_vti_cnf/choice5.html
@@ -1,19 +1,20 @@
 vti_encoding:SR|utf8-nl
-vti_timelastmodified:TR|04 Jul 2017 07:55:28 -0000
+vti_timelastmodified:TR|27 Jul 2017 10:16:20 -0000
 vti_extenderversion:SR|12.0.0.0
 vti_author:SR|DESKTOP-7U8GNMD\\Chi Hoong
 vti_modifiedby:SR|DESKTOP-7U8GNMD\\Chi Hoong
 vti_timecreated:TR|04 Jul 2017 07:55:28 -0000
-vti_cacheddtm:TX|04 Jul 2017 07:55:28 -0000
-vti_filesize:IR|2883
+vti_title:SR|Untitled 1
+vti_backlinkinfo:VX|choice4.html
+vti_nexttolasttimemodified:TR|27 Jul 2017 10:15:50 -0000
+vti_cacheddtm:TX|27 Jul 2017 10:16:20 -0000
+vti_filesize:IR|2837
 vti_cachedtitle:SR|Untitled 1
 vti_cachedbodystyle:SR|<body onload=playbg()>
-vti_cachedlinkinfo:VX|G|choicepages.dwt Q|css/choicestyles.css S|images/logo_with_text.png S|images/ANU_logo.svg.png S|images/Picture1.gif S|sounds/noisel05vol90.wav S|sounds/noiseh15vol60.wav S|sounds/noiseh05vol80.wav H|choice6.html
-vti_cachedsvcrellinks:VX|FGUS|choicepages.dwt FQUS|css/choicestyles.css FSUS|images/logo_with_text.png FSUS|images/ANU_logo.svg.png FSUS|images/Picture1.gif FSUS|sounds/noisel05vol90.wav FSUS|sounds/noiseh15vol60.wav FSUS|sounds/noiseh05vol80.wav FHUS|choice6.html
+vti_cachedlinkinfo:VX|G|choicepages.dwt Q|css/choicestyles.css S|images/Picture1.gif H|pause.html S|sounds/noisel05vol90.wav S|sounds/noiseh15vol60.wav S|sounds/noiseh05vol80.wav H|choice6.html
+vti_cachedsvcrellinks:VX|FGUS|choicepages.dwt FQUS|css/choicestyles.css FSUS|images/Picture1.gif NHUS|pause.html FSUS|sounds/noisel05vol90.wav FSUS|sounds/noiseh15vol60.wav FSUS|sounds/noiseh05vol80.wav FHUS|choice6.html
 vti_cachedneedsrewrite:BR|false
 vti_cachedhasbots:BR|false
 vti_cachedhastheme:BR|false
 vti_cachedhasborder:BR|false
 vti_charset:SR|utf-8
-vti_title:SR|Untitled 1
-vti_backlinkinfo:VX|choice4.html
