--- a/_vti_cnf/choiceinfo3.html
+++ b/_vti_cnf/choiceinfo3.html
@@ -1,18 +1,18 @@
 vti_encoding:SR|utf8-nl
 vti_author:SR|DESKTOP-7U8GNMD\\Chi Hoong
 vti_modifiedby:SR|DESKTOP-7U8GNMD\\Chi Hoong
-vti_timelastmodified:TR|07 Jul 2017 08:51:41 -0000
+vti_timelastmodified:TR|27 Jul 2017 10:02:39 -0000
 vti_timecreated:TR|07 Jul 2017 07:33:54 -0000
 vti_title:SR|Survey on Construction Noise
 vti_extenderversion:SR|12.0.0.0
 vti_backlinkinfo:VX|choiceinfo2.html
-vti_nexttolasttimemodified:TW|07 Jul 2017 08:22:34 -0000
-vti_cacheddtm:TX|07 Jul 2017 08:51:41 -0000
-vti_filesize:IR|1258
+vti_nexttolasttimemodified:TW|27 Jul 2017 09:50:23 -0000
+vti_cacheddtm:TX|27 Jul 2017 10:02:39 -0000
+vti_filesize:IR|914
 vti_cachedtitle:SR|Survey on Construction Noise
 vti_cachedbodystyle:SR|<body>
-vti_cachedlinkinfo:VX|G|default.dwt Q|css/styles.css S|images/logo_with_text.png S|images/ANU_logo.svg.png H|choiceinfo4.html
-vti_cachedsvcrellinks:VX|FGUS|default.dwt FQUS|css/styles.css FSUS|images/logo_with_text.png FSUS|images/ANU_logo.svg.png FHUS|choiceinfo4.html
+vti_cachedlinkinfo:VX|Q|css/choicestyles.css S|jquery.min.js Q|jquery-ui.css S|jquery-ui.min.js S|images/Picture1.gif H|pause.html H|choice1.html S|sounds/demo.wav
+vti_cachedsvcrellinks:VX|FQUS|css/choicestyles.css FSUS|jquery.min.js FQUS|jquery-ui.css FSUS|jquery-ui.min.js FSUS|images/Picture1.gif NHUS|pause.html FHUS|choice1.html FSUS|sounds/demo.wav
 vti_cachedneedsrewrite:BR|false
 vti_cachedhasbots:BR|false
 vti_cachedhastheme:BR|false
