--- a/choice1.html
+++ b/choice1.html
@@ -13,38 +13,22 @@
 		</div>		
 		<!-- #BeginEditable "content" -->
 		<div id="content">
-			<h1>Your Choices</h1>
+			<h1>Construction Noise in Singapore</h1>
 			
-			<p>We want to find out how much you are willing to pay for a 
-			reduction in construction noise. You will be presented with 8 
+			<p>In the remainder of this section, you will be presented with 8 
 			scenarios, each of which comprises of:
 			<ul>
 				<li>A background noise. This is the current level of noise 
 				and will be the noise level that you experience if no noise 
 				reduction measures are taken.</li>
-				<li>Two options with different noises and an increase in service
-				and conservancy charges (S&amp;CC). Mouse-over the alternatives to
+				<li>Two options with different noises and a monthly fee associated
+				with that option. Mouse-over the alternatives to
 				hear the different types of noise.</li>
 			</ul>
 
 			<p>In the first four scenarios, the construction noise occurs in the 
-			day, while in the next four scenarios, the construction noise occurs 
-			in the night. </p>
-			
-			<p>Please choose the option you prefer most, taking into account the 
-			changes in noise level as well as the change in S&amp;CC. When answering 
-			each scenario, only use the information provided in the that 
-			scenario, without referencing previous scenarios. </p>
-			<p>When answering the questions, please consider the following:</p>
-			<ul>
-				<li>The option that receives the greatest amount of support will 
-				be implemented and all residents will make the payment required 
-				for that option;</li>
-				<li>Each construction site is expected to last for a period of 
-				3-years (36 months), so you will have to pay the monthly charges 
-				associated with the option you choose for this period; and</li>
-				<li>Your income is limited and you have other expenses.</li>
-			</ul>
+			day (between 7am and 5pm), while in the next four scenarios, the construction noise occurs 
+			in the night (between 5pm and 7am). </p>
 		</div>
 	
 		<!-- #EndEditable -->
