--- a/choice5.html
+++ b/choice5.html
@@ -10,10 +10,6 @@
 	<body onload=playbg()>
 		
 	<div id="wrapper">	
-		<div id="top">
-			<span class="mewr"><img src="images/logo_with_text.png" /></span>
-			<span class="anu"><img src="images/ANU_logo.svg.png" /></span>		
-		</div>			
 		<div id="content">	
 		
 			<!-- #BeginEditable "header" -->
@@ -51,6 +47,11 @@
 				</table>
 			<!-- #EndEditable -->
 			</div>
+			
+			<div id="pause">
+				<p><a href="pause.html">Click here to pause<br>or terminate the survey.</a></p>
+			</div>
+
 			<br>
 		</div>
 
