--- a/choiceinfo2.html
+++ b/choiceinfo2.html
@@ -13,24 +13,16 @@
 		</div>		
 		<!-- #BeginEditable "content" -->
 		<div id="content">
-			<h1>What can be done?</h1>
+			<h1>Construction Noise in Singapore</h1>
 			
-			<p>Construction noise could be reduced if some of the following measures
-			were adopted:</p>
+			<p>Before we begin this section of the survey, we will play a 30 
+			second recording of construction noise in Singapore. </p>
 			
-			<ul>
-				<li>Change the equipment used for construction, so that quieter
-				construction equipment is used.</li>
-				<li>Erect noise barriers between the construction site and 
-				residences near the site.</li>
-				<li>Plan construction activities so that noisier construction
-				work is carried out when residents are away from home.</li>
-				<li>Have larger buffer distances between construction sites and
-				residences so that the noise can dissipate before it reaches residences.</li>
-			</ul>
+			<p>This noise will gradually increase in volume until the maximum level 
+			that you will experience in this section of the survey.</p>
+			<p>If you feel any discomfort when we are playing the construction 
+			noise, please pause the survey and inform the surveyor. </p>
 			
-			<p>How much noise levels can be reduced depend on how many of these measures
-			are adopted and how they are combined.</p>
 		</div>
 	
 		<!-- #EndEditable -->
