--- a/choice2.html
+++ b/choice2.html
@@ -15,15 +15,7 @@
 		<div id="content">
 			<h1>Construction Noise in the Day</h1>
 			
-			<p>We will first ask you about construction noise in the day. </p>
-			<p>In the next four questions, please answer as if you are 
-			experiencing the construction noise in the day. </p>
-			
-			<h2>Gentle reminder</h2>
-			
-			<p>We will be playing several recorded construction sounds to you during this test. If you 
-			feel any discomfort, please terminate the survey by removing the 
-			headphones and informing the surveyor. </p>
+			<p>We will start with the 4 choices related to construction noise in the day.</p>
 
 		</div>
 	
