--- a/choiceinfo3.html
+++ b/choiceinfo3.html
@@ -1,47 +1,44 @@
 ﻿<html xmlns="http://www.w3.org/1999/xhtml">
-	<!-- #BeginTemplate "default.dwt" -->
 	<head>
 		<title>Survey on Construction Noise</title>
-		<link href="css/styles.css" rel="stylesheet" type="text/css" media="screen">	
+		<link href="css/choicestyles.css" rel="stylesheet" type="text/css" media="screen">	
+		<script src="jquery.min.js"></script>	
+		<link rel="stylesheet" href="jquery-ui.css">
+		<script src="jquery-ui.min.js"></script>
+
 	</head>
 
 	<body>
 	<div id="wrapper">	
-		<div id="top">
-			<span class="mewr"><img src="images/logo_with_text.png" /></span>
-			<span class="anu"><img src="images/ANU_logo.svg.png" /></span>		
-		</div>		
-		<!-- #BeginEditable "content" -->
 		<div id="content">
-			<h1>How will these activities be funded?</h1>
-			
-			<p>Measures used to reduce construction noise are costly and 
-			different types of noise management activities will have different costs.</p>
-			
-			<p>Implementation of these measures will be funded from and increase 
-			in the service and 
-			conservancy charges (S&amp;CC). The S&amp;CC is collected monthly and the 
-			increase will be for three years <span>–&nbsp;the </span>duration of the 
-			construction activity. 
-			</p>
-
+			<div id="time"><img src="images/Picture1.gif"></div>
+		
+			<div id="demopause">
+				<p><a href="pause.html">Click here to pause or terminate the survey.</a></p>
+			</div>
 		</div>
-	
-		<!-- #EndEditable -->
-					
-				<div id="footer">
-				<!-- #BeginEditable "next" -->
 
-			<p><a href="choiceinfo4.html">Next</a></p>
-	
-				<!-- #EndEditable -->
-
+		<br>
+		
+		<div id="footer">
+			<p><a href="choice1.html">Next</a></p>
 		</div>
-	
-	
+		
+		<audio id="demo" src="sounds/demo.wav"></audio>
+		
 	</div>
+	
+	<script>
+		var _player = document.getElementById("demo");
+
+		$("document").ready(function() {
+			_player.play()
+		});
+	</script>
+		
+		
+		
 	</body>
 	
-<!-- #EndTemplate -->
 	
 </html>
