--- a/demo.html
+++ b/demo.html
@@ -22,6 +22,7 @@
 					<form> 
 						<input type="radio" name="gender" value="male"><label for="male"> Male</label><br> 
 						<input type="radio" name="gender" value="female"><label for="female"> Female</label><br> 
+						<input type="radio" name="gender" value="na"><label for="na"> Prefer not to state</label><br> 
 					</form>
 				</li>
 				<li>Race
@@ -31,6 +32,7 @@
 						<input type="radio" name="race" value="ind"><label for="ind"> Indian</label><br> 
 						<input type="radio" name="race" value="eur"><label for="eur"> Eurasian</label><br> 
 						<input type="radio" name="race" value="oth"><label for="oth"> Other</label><br> 
+						<input type="radio" name="race" value="na"><label for="na"> Prefer not to state</label><br> 
 					</form>
 				</li>
 				<li>Type of dwelling
@@ -40,7 +42,7 @@
 						<input type="radio" name="dwelling" value="hdb4"><label for="hdb4"> HDB (4-Room Flat)</label><br> 
 						<input type="radio" name="dwelling" value="hdb5"><label for="hdb5"> HDB (5-Room Flat or Executive Flat)</label><br> 
 						<input type="radio" name="dwelling" value="condo"><label for="condo"> Condominium or other apartments</label><br> 
-						<input type="radio" name="dwelling" value="landed"><label for="landed"> Landed property</label><br> 
+						<input type="radio" name="dwelling" value="na"><label for="na"> Prefer not to state</label><br> 
 					</form>
 				</li>
 				<li>What is your estimated monthly household income? (This is 
