--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			survey at any point. </p>
 			
 			<p>If you have any enquiries, please contact Leong Chi Hoong 
-			(email: <a href="mailto:chihoong.leong@anu.edu.au">chihoong.leong@anu.edu.au</a>; contact number: +65 9030 1763). </p>
+			(<a href="mailto:chihoong.leong@anu.edu.au">chihoong.leong@anu.edu.au</a>; +65 9030 1763). </p>
 			
 			<h2>Research Team</h2>
 			
