--- a/thank.html
+++ b/thank.html
@@ -14,6 +14,12 @@
 		<!-- #BeginEditable "content" -->
 		<div id="content">
 			<h1>Thank you for completing the survey!</h1>
+			
+			<p>If you like, we can send you a summary of the results of this study when it has been completed. If so, please leave your email address:</p>
+			<form> 
+					<input type="text" name="age" id="age">
+			</form>
+
 		</div>
 	
 		<!-- #EndEditable -->
