--- a/_vti_cnf/choiceinfo3.html
+++ b/_vti_cnf/choiceinfo3.html
@@ -12,7 +12,7 @@ vti_filesize:IR|914
 vti_cachedtitle:SR|Survey on Construction Noise
 vti_cachedbodystyle:SR|<body>
 vti_cachedlinkinfo:VX|Q|css/choicestyles.css S|jquery.min.js Q|jquery-ui.css S|jquery-ui.min.js S|images/Picture1.gif H|pause.html H|choice1.html S|sounds/demo.wav
-vti_cachedsvcrellinks:VX|FQUS|css/choicestyles.css FSUS|jquery.min.js FQUS|jquery-ui.css FSUS|jquery-ui.min.js FSUS|images/Picture1.gif NHUS|pause.html FHUS|choice1.html FSUS|sounds/demo.wav
+vti_cachedsvcrellinks:VX|FQUS|css/choicestyles.css FSUS|jquery.min.js FQUS|jquery-ui.css FSUS|jquery-ui.min.js FSUS|images/Picture1.gif FHUS|pause.html FHUS|choice1.html FSUS|sounds/demo.wav
 vti_cachedneedsrewrite:BR|false
 vti_cachedhasbots:BR|false
 vti_cachedhastheme:BR|false
