--- a/_vti_cnf/acuity8000.html
+++ b/_vti_cnf/acuity8000.html
@@ -12,7 +12,7 @@ vti_filesize:IR|769
 vti_cachedtitle:SR|Survey on Construction Noise
 vti_cachedbodystyle:SR|<body>
 vti_cachedlinkinfo:VX|G|acuitypage1.dwt Q|css/styles.css H|pause.html
-vti_cachedsvcrellinks:VX|FGUS|acuitypage1.dwt FQUS|css/styles.css NHUS|pause.html
+vti_cachedsvcrellinks:VX|FGUS|acuitypage1.dwt FQUS|css/styles.css FHUS|pause.html
 vti_cachedneedsrewrite:BR|false
 vti_cachedhasbots:BR|false
 vti_cachedhastheme:BR|false
