--- a/_vti_cnf/acuityascend500.html
+++ b/_vti_cnf/acuityascend500.html
@@ -12,7 +12,7 @@ vti_filesize:IR|2170
 vti_cachedtitle:SR|Survey on Construction Noise
 vti_cachedbodystyle:SR|<body>
 vti_cachedlinkinfo:VX|G|acuityascend.dwt Q|css/styles.css S|jquery.min.js Q|jquery-ui.css S|jquery-ui.min.js H|pause.html H|acuity250.html
-vti_cachedsvcrellinks:VX|FGUS|acuityascend.dwt FQUS|css/styles.css FSUS|jquery.min.js FQUS|jquery-ui.css FSUS|jquery-ui.min.js NHUS|pause.html FHUS|acuity250.html
+vti_cachedsvcrellinks:VX|FGUS|acuityascend.dwt FQUS|css/styles.css FSUS|jquery.min.js FQUS|jquery-ui.css FSUS|jquery-ui.min.js FHUS|pause.html FHUS|acuity250.html
 vti_cachedneedsrewrite:BR|false
 vti_cachedhasbots:BR|false
 vti_cachedhastheme:BR|false
