--- a/_vti_cnf/choice11.html
+++ b/_vti_cnf/choice11.html
@@ -12,7 +12,7 @@ vti_filesize:IR|2853
 vti_cachedtitle:SR|Valuing Construction Noise in th
 vti_cachedbodystyle:SR|<body onload=playbg()>
 vti_cachedlinkinfo:VX|G|choicepages.dwt Q|css/choicestyles.css S|images/Picture2.gif H|pause.html S|sounds/noisel20vol90.wav S|sounds/noisel05vol80.wav S|sounds/noiseh10vol60.wav H|demo.html
-vti_cachedsvcrellinks:VX|FGUS|choicepages.dwt FQUS|css/choicestyles.css FSUS|images/Picture2.gif NHUS|pause.html FSUS|sounds/noisel20vol90.wav FSUS|sounds/noisel05vol80.wav FSUS|sounds/noiseh10vol60.wav FHUS|demo.html
+vti_cachedsvcrellinks:VX|FGUS|choicepages.dwt FQUS|css/choicestyles.css FSUS|images/Picture2.gif FHUS|pause.html FSUS|sounds/noisel20vol90.wav FSUS|sounds/noisel05vol80.wav FSUS|sounds/noiseh10vol60.wav FHUS|demo.html
 vti_cachedneedsrewrite:BR|false
 vti_cachedhasbots:BR|false
 vti_cachedhastheme:BR|false
