--- a/_vti_cnf/choice4.html
+++ b/_vti_cnf/choice4.html
@@ -12,7 +12,7 @@ vti_filesize:IR|2853
 vti_cachedtitle:SR|Valuing Construction Noise in th
 vti_cachedbodystyle:SR|<body onload=playbg()>
 vti_cachedlinkinfo:VX|G|choicepages.dwt Q|css/choicestyles.css S|images/Picture1.gif H|pause.html S|sounds/noiseh15vol80.wav S|sounds/noisel10vol60.wav S|sounds/noisel05vol70.wav H|choice5.html
-vti_cachedsvcrellinks:VX|FGUS|choicepages.dwt FQUS|css/choicestyles.css FSUS|images/Picture1.gif NHUS|pause.html FSUS|sounds/noiseh15vol80.wav FSUS|sounds/noisel10vol60.wav FSUS|sounds/noisel05vol70.wav FHUS|choice5.html
+vti_cachedsvcrellinks:VX|FGUS|choicepages.dwt FQUS|css/choicestyles.css FSUS|images/Picture1.gif FHUS|pause.html FSUS|sounds/noiseh15vol80.wav FSUS|sounds/noisel10vol60.wav FSUS|sounds/noisel05vol70.wav FHUS|choice5.html
 vti_cachedneedsrewrite:BR|false
 vti_cachedhasbots:BR|false
 vti_cachedhastheme:BR|false
