--- a/_vti_cnf/choice5.html
+++ b/_vti_cnf/choice5.html
@@ -12,7 +12,7 @@ vti_filesize:IR|2837
 vti_cachedtitle:SR|Untitled 1
 vti_cachedbodystyle:SR|<body onload=playbg()>
 vti_cachedlinkinfo:VX|G|choicepages.dwt Q|css/choicestyles.css S|images/Picture1.gif H|pause.html S|sounds/noisel05vol90.wav S|sounds/noiseh15vol60.wav S|sounds/noiseh05vol80.wav H|choice6.html
-vti_cachedsvcrellinks:VX|FGUS|choicepages.dwt FQUS|css/choicestyles.css FSUS|images/Picture1.gif NHUS|pause.html FSUS|sounds/noisel05vol90.wav FSUS|sounds/noiseh15vol60.wav FSUS|sounds/noiseh05vol80.wav FHUS|choice6.html
+vti_cachedsvcrellinks:VX|FGUS|choicepages.dwt FQUS|css/choicestyles.css FSUS|images/Picture1.gif FHUS|pause.html FSUS|sounds/noisel05vol90.wav FSUS|sounds/noiseh15vol60.wav FSUS|sounds/noiseh05vol80.wav FHUS|choice6.html
 vti_cachedneedsrewrite:BR|false
 vti_cachedhasbots:BR|false
 vti_cachedhastheme:BR|false
