--- a/_vti_cnf/choice9.html
+++ b/_vti_cnf/choice9.html
@@ -12,7 +12,7 @@ vti_filesize:IR|2856
 vti_cachedtitle:SR|Valuing Construction Noise in th
 vti_cachedbodystyle:SR|<body onload=playbg()>
 vti_cachedlinkinfo:VX|G|choicepages.dwt Q|css/choicestyles.css S|images/Picture2.gif H|pause.html S|sounds/noiseh15vol90.wav S|sounds/noisel10vol80.wav S|sounds/noiseh05vol60.wav H|choice10.html
-vti_cachedsvcrellinks:VX|FGUS|choicepages.dwt FQUS|css/choicestyles.css FSUS|images/Picture2.gif NHUS|pause.html FSUS|sounds/noiseh15vol90.wav FSUS|sounds/noisel10vol80.wav FSUS|sounds/noiseh05vol60.wav FHUS|choice10.html
+vti_cachedsvcrellinks:VX|FGUS|choicepages.dwt FQUS|css/choicestyles.css FSUS|images/Picture2.gif FHUS|pause.html FSUS|sounds/noiseh15vol90.wav FSUS|sounds/noisel10vol80.wav FSUS|sounds/noiseh05vol60.wav FHUS|choice10.html
 vti_cachedneedsrewrite:BR|false
 vti_cachedhasbots:BR|false
 vti_cachedhastheme:BR|false
