--- a/_vti_cnf/thank.html
+++ b/_vti_cnf/thank.html
@@ -5,7 +5,7 @@ vti_author:SR|DESKTOP-7U8GNMD\\Chi Hoong
 vti_modifiedby:SR|DESKTOP-7U8GNMD\\Chi Hoong
 vti_timecreated:TR|04 Jul 2017 07:52:24 -0000
 vti_title:SR|Survey on Construction Noise
-vti_backlinkinfo:VX|demo.html
+vti_backlinkinfo:VX|demo.html pause.html
 vti_nexttolasttimemodified:TW|27 Jul 2017 10:27:15 -0000
 vti_cacheddtm:TX|27 Jul 2017 10:27:15 -0000
 vti_filesize:IR|978
