--- a/choice1.html
+++ b/choice1.html
@@ -21,11 +21,11 @@
 				<li>A background noise. This is the current level of noise 
 				and will be the noise level that you experience if no noise 
 				reduction measures are taken.</li>
-				<li>Two options with different noises and a monthly fee associated
+				<li>Two options with different noises and a monthly fee that you 
+				will have to pay in order to enjoy the reduction in noise associated
 				with that option. Mouse-over the alternatives to
 				hear the different types of noise.</li>
 			</ul>
-
 			<p>In the first four scenarios, the construction noise occurs in the 
 			day (between 7am and 5pm), while in the next four scenarios, the construction noise occurs 
 			in the night (between 5pm and 7am). </p>
