--- a/acuityascend250.html
+++ b/acuityascend250.html
@@ -27,7 +27,7 @@
 		<div id="footer">
 		<!-- #BeginEditable "next" -->
 
-			<p><a href="choiceinfo1.html">Next</a></p>
+			<p><a href="demo.html">Next</a></p>
 			
 		<!-- #EndEditable -->
 		</div>
