--- a/choice11.html
+++ b/choice11.html
@@ -67,7 +67,7 @@
 		<div id="footer">
 			<!-- #BeginEditable "footer" -->
 			<p>
-			<a href="demo.html">Next</a></p>
+			<a href="acuityintro.html">Next</a></p>
 		<!-- #EndEditable -->
 		</div>
 		
