--- a/_vti_cnf/acuity2000.html
+++ b/_vti_cnf/acuity2000.html
@@ -5,7 +5,7 @@ vti_timelastmodified:TR|27 Jul 2017 06:22:57 -0000
 vti_timecreated:TR|27 Jul 2017 06:13:56 -0000
 vti_title:SR|Survey on Construction Noise
 vti_extenderversion:SR|12.0.0.0
-vti_backlinkinfo:VX|acuityascendtry1000.html acuityascend1000.html
+vti_backlinkinfo:VX|acuityascend1000.html
 vti_nexttolasttimemodified:TR|27 Jul 2017 06:21:11 -0000
 vti_cacheddtm:TX|27 Jul 2017 06:21:11 -0000
 vti_filesize:IR|769
