--- a/profile.html
+++ b/profile.html
@@ -68,7 +68,7 @@
 				<!-- #BeginEditable "next" -->
 
 			<p>
-			<a href="acuityintro.html">Next</a></p>
+			<a href="choiceinfo1.html">Next</a></p>
 	
 				<!-- #EndEditable -->
 
