change demo sound page

--- a/choiceinfo3.html
+++ b/choiceinfo3.html
@@ -14,7 +14,7 @@
 			<div id="time"><img src="images/Picture1.gif"></div>
 		
 			<div id="demopause">
-				<p>You can proceed to the next page after the sound has ended</p>
+				<p>You can proceed to the next page after the sound clip has ended</p>
 				<br>
 				<p><a href="pause.html">Click here to pause or terminate the survey.</a></p>
 			</div>
