--- a/acuityascend1000try.html
+++ b/acuityascend1000try.html
@@ -27,7 +27,7 @@
 		<div id="footer">
 		<!-- #BeginEditable "next" -->
 
-			<p><a href="acuity2000try.html">Next</a></p>
+			<p><a href="">Next</a></p>
 			
 		<!-- #EndEditable -->
 		</div>
