--- a/_vti_cnf/choicetry.html
+++ b/_vti_cnf/choicetry.html
@@ -1,18 +1,18 @@
 vti_encoding:SR|utf8-nl
 vti_author:SR|DESKTOP-7U8GNMD\\Chi Hoong
 vti_modifiedby:SR|DESKTOP-7U8GNMD\\Chi Hoong
-vti_timelastmodified:TR|03 Aug 2017 09:59:44 -0000
+vti_timelastmodified:TR|04 Aug 2017 06:17:02 -0000
 vti_timecreated:TR|02 Aug 2017 09:58:51 -0000
 vti_title:SR|Valuing Construction Noise in th
 vti_extenderversion:SR|12.0.0.0
 vti_backlinkinfo:VX|
-vti_nexttolasttimemodified:TW|03 Aug 2017 09:56:37 -0000
-vti_cacheddtm:TX|03 Aug 2017 09:59:44 -0000
-vti_filesize:IR|4263
+vti_nexttolasttimemodified:TW|03 Aug 2017 09:59:44 -0000
+vti_cacheddtm:TX|04 Aug 2017 06:17:02 -0000
+vti_filesize:IR|4251
 vti_cachedtitle:SR|Valuing Construction Noise in th
 vti_cachedbodystyle:SR|<body>
-vti_cachedlinkinfo:VX|Q|css/choicestylestry.css S|jquery.min.js Q|jquery-ui.css S|jquery-ui.min.js S|images/Picture1.gif H|pause.html S|sounds/noisel15vol90.wav S|sounds/noiseh05vol60.wav S|sounds/noisel05vol60.wav S|sounds/noisel15vol90.wav S|sounds/noiseh05vol60.wav S|sounds/noisel05vol60.wav H|choice4.html
-vti_cachedsvcrellinks:VX|FQUS|css/choicestylestry.css FSUS|jquery.min.js FQUS|jquery-ui.css FSUS|jquery-ui.min.js FSUS|images/Picture1.gif FHUS|pause.html FSUS|sounds/noisel15vol90.wav FSUS|sounds/noiseh05vol60.wav FSUS|sounds/noisel05vol60.wav FSUS|sounds/noisel15vol90.wav FSUS|sounds/noiseh05vol60.wav FSUS|sounds/noisel05vol60.wav FHUS|choice4.html
+vti_cachedlinkinfo:VX|Q|css/choicestylestry.css S|jquery.min.js Q|jquery-ui.css S|jquery-ui.min.js S|images/Picture1.gif H|pause.html S|sounds/noisel15vol90.wav S|sounds/noiseh05vol60.wav S|sounds/noisel05vol60.wav S|sounds/noisel15vol90.wav S|sounds/noiseh05vol60.wav S|sounds/noisel05vol60.wav
+vti_cachedsvcrellinks:VX|FQUS|css/choicestylestry.css FSUS|jquery.min.js FQUS|jquery-ui.css FSUS|jquery-ui.min.js FSUS|images/Picture1.gif FHUS|pause.html FSUS|sounds/noisel15vol90.wav FSUS|sounds/noiseh05vol60.wav FSUS|sounds/noisel05vol60.wav FSUS|sounds/noisel15vol90.wav FSUS|sounds/noiseh05vol60.wav FSUS|sounds/noisel05vol60.wav
 vti_cachedneedsrewrite:BR|false
 vti_cachedhasbots:BR|false
 vti_cachedhastheme:BR|false
