--- a/choicetry.html
+++ b/choicetry.html
@@ -66,23 +66,23 @@
 		</div>
 
 		<div id="edit0">
-			<audio id="background0" src="sounds/noisel15vol90.wav"></audio>
-			<audio id="option3" src="sounds/noiseh05vol60.wav"></audio>
-			<audio id="option4" src="sounds/noisel05vol60.wav"></audio>
+			<audio id="background0" src="sounds/noisel15vol90.wav" preload="auto"></audio>
+			<audio id="option3" src="sounds/noiseh05vol60.wav" preload="auto"></audio>
+			<audio id="option4" src="sounds/noisel05vol60.wav" preload="auto"></audio>
 			
-			<audio id="backgroundend0" src="sounds/noisel15vol90.wav" loop="loop"></audio>
-			<audio id="option1end0" src="sounds/noiseh05vol60.wav" loop="loop"></audio>
-			<audio id="option2end0" src="sounds/noisel05vol60.wav" loop="loop"></audio>
+			<audio id="backgroundend0" src="sounds/noisel15vol90.wav" loop="loop" preload="auto"></audio>
+			<audio id="option1end0" src="sounds/noiseh05vol60.wav" loop="loop" preload="auto"></audio>
+			<audio id="option2end0" src="sounds/noisel05vol60.wav" loop="loop" preload="auto"></audio>
 		</div>
 		
 		<div id="edit">
-			<audio id="background" src="sounds/noisel15vol90.wav"></audio>
-			<audio id="option1" src="sounds/noiseh05vol60.wav"></audio>
-			<audio id="option2" src="sounds/noisel05vol60.wav"></audio>
+			<audio id="background" src="sounds/noisel15vol90.wav" preload="auto"></audio>
+			<audio id="option1" src="sounds/noiseh05vol60.wav" preload="auto"></audio>
+			<audio id="option2" src="sounds/noisel05vol60.wav" preload="auto"></audio>
 			
-			<audio id="backgroundend" src="sounds/noisel15vol90.wav" loop="loop"></audio>
-			<audio id="option1end" src="sounds/noiseh05vol60.wav" loop="loop"></audio>
-			<audio id="option2end" src="sounds/noisel05vol60.wav" loop="loop"></audio>
+			<audio id="backgroundend" src="sounds/noisel15vol90.wav" loop="loop" preload="auto"></audio>
+			<audio id="option1end" src="sounds/noiseh05vol60.wav" loop="loop" preload="auto"></audio>
+			<audio id="option2end" src="sounds/noisel05vol60.wav" loop="loop" preload="auto"></audio>
 		</div>
 
 		<div id="footer">
