--- a/choiceinfo7.html
+++ b/choiceinfo7.html
@@ -35,7 +35,7 @@
 				<div id="footer">
 				<!-- #BeginEditable "next" -->
 
-			<p><a href="choice1.html">Next</a></p>
+			<p><a href="choicetry.html">Next</a></p>
 	
 				<!-- #EndEditable -->
 
