--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				<div id="footer">
 				<!-- #BeginEditable "next" -->
 
-			<p><a href="consent.html">Next</a></p>
+			<p><a href="info.html">Next</a></p>
 		
 				<!-- #EndEditable -->
 
