--- a/choicetry2.html
+++ b/choicetry2.html
@@ -12,6 +12,40 @@
 
       <div id="content">
 
+        <div id="choice1">
+
+        </div>
+
+        <div id="choice2">
+
+        </div>
+
+        <div id="choice3">
+
+        </div>
+
+        <div id="choice4">
+
+        </div>
+
+        <div id="choice5">
+
+        </div>
+
+        <div id="choice6">
+
+        </div>
+
+        <div id="choice7">
+
+        </div>
+
+        <div id="choice8">
+
+        </div>
+
+
+
         <div id="demostart">
           <p>Press this box to start</p>
         </div>
@@ -26,6 +60,7 @@
       			<th>Change in Construction Duration</th>
             <th>Construction Noise</th>
       			<th>One-off Charge</th>
+            <th>Your Choice</th>
       		</tr>
 
       		<tbody class="statusquo">
@@ -45,6 +80,7 @@
               <p class="statusquopause">Pause</p>
             </td>
       			<td>$0</td>
+            <td><form><input type="radio" value="Set A Base" name="formsplus[fp-radio][Choice_Set_A][]"></form></td
       		</tr>
       		</tbody>
 
@@ -66,6 +102,7 @@
               <p class="opt1pause">Pause</p>
             </td>
       			<td>$100</td>
+            <td><form><input type="radio" value="Set A Option1" name="formsplus[fp-radio][Choice_Set_A][]"></form></td>
       		</tr>
       		</tbody>
 
@@ -88,6 +125,7 @@
               <p class="opt2pause">Pause</p>
             </td>
       			<td>$200</td>
+            <td><form><input type="radio" value="Set A Option2" name="formsplus[fp-radio][Choice_Set_A][]"></form></td>
       		</tr>
       		</tbody>
 
